Fix dropdowns z-index

--- a/client/src/sass/include/_variables.scss
+++ b/client/src/sass/include/_variables.scss
@@ -127,7 +127,6 @@ $variables: (
 $zindex: (
   miniature       :    10,
   privacymsg      :    20,
-  dropdown        : 12000,
   sub-menu        : 12500,
   menu            : 12600,
   search-typeahead: 12650,
@@ -136,6 +135,7 @@ $zindex: (
   tooltip         : 14000,
   loadbar         : 15000,
   modal           : 16000,
+  dropdown        : 17000,
   help-popover    : 17000,
   notification    : 18000,
   hotkeys         : 19000
